<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.compupro.sanyoremote.MainActivity">

    <Button
        android:id="@+id/btnpower"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="123dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="blast"
        android:tag="Power"
        android:text="@string/Power"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btninput"
        android:layout_width="123dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="blast"
        android:tag="Input"
        android:text="@string/Input"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/numpad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpower">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="1"
                android:text="1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="2"
                android:text="2"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="3"
                android:text="3"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="4"
                android:text="4"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="5"
                android:text="5"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="6"
                android:text="6"
                android:textSize="36sp"
                android:onClick="blast" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="7"
                android:text="7"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="8"
                android:text="8"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="blast"
                android:tag="9"
                android:text="9"
                android:textSize="36sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:onClick="blast"
        android:tag="0"
        android:text="0"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/volkeys"
        app:layout_constraintStart_toEndOf="@+id/chankeys"
        app:layout_constraintTop_toBottomOf="@+id/numpad" />

    <LinearLayout
        android:id="@+id/volkeys"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numpad">

        <Button
            android:id="@+id/volup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="blast"
            android:tag="VOLup"
            android:text="@string/VOLup"
            android:textSize="24sp" />

        <Button
            android:id="@+id/mute"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:onClick="blast"
            android:tag="Mute"
            android:text="@string/Mute"
            android:textSize="18sp" />

        <Button
            android:id="@+id/voldown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="blast"
            android:tag="VOLdown"
            android:text="@string/VOLdown"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chankeys"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numpad">

        <Button
            android:id="@+id/chup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="blast"
            android:tag="CHup"
            android:text="@string/CHup"
            android:textSize="24sp" />

        <Button
            android:id="@+id/chdown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="blast"
            android:tag="CHdown"
            android:text="@string/CHdown"
            android:textSize="24sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>